--- a/templates/cash.html
+++ b/templates/cash.html
@@ -173,7 +173,7 @@
                       </div>
                       <div class="col-md-12">
                         <div class="form-group mb-0">
-                          <textarea class="form-control textarea" name="con_message" placeholder="Your Address"></textarea>
+                          <textarea class="form-control textarea" name="con_addresscon_address" placeholder="Your Address"></textarea>
                         </div>
                       </div>
                       <div class="col-md-12">
@@ -253,11 +253,7 @@
             </div>
             <div class="col-md-6">
               <div class="widget-bottom-menu-wrap">
-                <ul class="nav-menu">
-                  <li><a href="#">Terms</a></li>
-                  <li><a href="#">Privacy</a></li>
-                  <li><a href="#">License</a></li>
-                </ul>
+               
               </div>
             </div>
           </div>
