--- a/templates/home.html
+++ b/templates/home.html
@@ -62,6 +62,9 @@
 					<li class="level1">
 						<a href="/logout" class="link-menu delay03 uppercase">logout</a>
 					</li>
+					<li class="level1">
+						<a href="/orders" class="link-menu delay03 uppercase">Admin Mode</a>
+					</li>
 				</ul>
 			</div>
 			<div class="col-lg-3 col-md-3 col-sm-6 col-xs-7 text-right icon-main">
