--- a/templates/details1.html
+++ b/templates/details1.html
@@ -99,8 +99,10 @@
 				<div class="col-lg-9 col-md-9 col-sm-9 col-xs-9">
 					<div class="slick-product-detail-vertical margin_bottom_20 slick-initialized slick-slider">
 						<!-- <button class="slick-prev slick-arrow slick-disabled" aria-label="Previous" type="button" aria-disabled="true" style="display: inline-block;">Previous</button> -->
-						<div class="slick-list draggable"><div class="slick-track" style="opacity: 1; width: 1881px; transform: translate3d(0px, 0px, 0px);"><div class="slick-slide slick-current slick-active" data-slick-index="0" aria-hidden="false" style="width: 627px;" tabindex="0">
-							<img src="/static/home_files/1.jpg" class="img-responsive full-width" alt="">
+						<div class="slick-list draggable" ><div class="slick-track" style="opacity: 1; width: 100%; transform: translate3d(0px, 0px, 0px);"><div class="slick-slide slick-current slick-active" data-slick-index="0" aria-hidden="false" style="width: 100%;" tabindex="0" >
+							<div>
+								<img src="/static/home_files/1.jpg" class="img-responsive full-width" alt="">
+							</div>
 						</div>
 					</div>
 				</div>
