--- a/templates/home.html
+++ b/templates/home.html
@@ -86,23 +86,11 @@
 	</div>
 </header>
 <main>
-	<div class="slider-home6 container margin_bottom_100 slick-initialized slick-slider"><button class="slick-prev slick-arrow" aria-label="Previous" type="button" style="display: inline-block;">Previous</button>
-		<div class="slick-list draggable"><div class="slick-track" style="opacity: 1; width: 3440px;"><div class="row relative slick-slide slick-current slick-active" data-slick-index="0" aria-hidden="false" style="width: 1750px; position: relative; left: 0px; top: 0px; z-index: 999; opacity: 1;" tabindex="0">
-			<div class="col-lg-6 col-md-6 col-sm-6 col-xs-6 space_right_10 img_slider_1">
-				<a href="#" class="inline-block over-hidden" tabindex="0"><img src="/static/home_files/ban1.jpg" class="img-responsive delay2 " alt=""></a>
-			</div>
-			<div class="col-lg-6 col-md-6 col-sm-6 col-xs-6 space_left_10 img_slider_2">
-				<a href="#" class="inline-block over-hidden" tabindex="0"><img src="/static/home_files/ban2.jpg" class="img-responsive delay2 " alt=""></a>
-			</div>
-			<div class="text-slider-home6 absolute">
-					<p class="delay1_5 btn-slider margin_bottom_50"><a href="#" class="title-font delay1_5" tabindex="0">newarrivals</a></p>
-					<!-- <p class="uppercase menu-font des-slider" style="color: white;">new sport collection</p> -->
-			</div>
-		</div>
-		</div></div>
-		
-	<!-- <button class="slick-next slick-arrow" aria-label="Next" type="button" style="display: inline-block;">Next</button></div> -->
-	<!--  -->
+	<div class="container" style="max-width: 100%;">
+		<img src="/static/home_files/ban1.png" class="img-responsive delay2 " alt="" style="object-fit: cover;width: auto;">
+	
+	</div>
+	
 	<div class="container margin_bottom_130 section-bestseller-home1 home6">
 		<div class="row">
 			<div class="col-md-12">
@@ -110,185 +98,60 @@
 				<h1 class="title-font capital margin_bottom_10 title-bestseller text-center">bestseller</h1>
 				<p class="des-font margin_bottom_50 des-bestseller text-center">I did not even know that there were any better conditions to escape to, but I was more than willing 
 			to take my chances among people fashioned after.</p>
-			<br><br>
-			
-			<div class="slick-bestseller-home6 slick-initialized slick-slider"><button class="slick-prev slick-arrow" aria-label="Previous" type="button" style="">Previous</button><div class="slick-list draggable"><div class="slick-track" style="opacity: 1; width: 7100px; transform: translate3d(-1420px, 0px, 0px);"><div class="slick-slide slick-cloned" data-slick-index="-1" aria-hidden="true" style="width: 1420px;" tabindex="-1"><div><div class="product blazers column margin_bottom_40 show" style="width: 25%; display: inline-block;">
-					<div class="img-product relative">
-						<a href="/details1" tabindex="-1"><img src="/static/home_files/product_3.jpg" class="img-responsive" alt=""></a>
-						
-						<div class="product-icon absolute text-center">
-							<form method="post" action="/details1" enctype="multipart/form-data" class="inline-block icon-addcart">
-  							  <input type="hidden" name="id" value="" tabindex="-1">
-  							  <button type="submit" name="add" class="enj-add-to-cart-btn btn-default" tabindex="-1"><i class="ti-bag"></i></button>
-  							</form>
-  							<a href="/details1" class="icon-heart inline-block" tabindex="-1"><i class="ti-heart"></i></a>
-  							<a href="/details1" class="engoj_btn_quickview icon-quickview inline-block" title="quickview" tabindex="-1">
-      						  <i class="ti-more-alt"></i>
-      						</a>
-						</div>
-					</div>
-					<div class="info-product text-center">
-						<h4 class="des-font capital title-product space_top_20"><a href="/details1" tabindex="-1"> Printed Round Neck T-Shirt</a></h4>
-						<p class="number-font"><span class="price">$123.00</span></p>
-					</div>
-				</div>
-			
-				<div class="product jackets column margin_bottom_40 show" style="width: 25%; display: inline-block;">
-					<div class="img-product relative">
-						<a href="#" tabindex="-1"><img src="/static/home_files/product_4.jpg" class="img-responsive" alt=""></a>
-						<!-- <figure class="absolute uppercase label-sale title-font text-center">sale</figure> -->
-						<div class="product-icon absolute text-center">
-							<form method="post" action="/details1" enctype="multipart/form-data" class="inline-block icon-addcart">
-  							  <input type="hidden" name="id" value="" tabindex="-1">
-  							  <button type="submit" name="add" class="enj-add-to-cart-btn btn-default" tabindex="-1"><i class="ti-bag"></i></button>
-  							</form>
-  							<a href="/details1" class="icon-heart inline-block" tabindex="-1"><i class="ti-heart"></i></a>
-  							<a href="/details1" class="engoj_btn_quickview icon-quickview inline-block" title="quickview" tabindex="-1">
-      						  <i class="ti-more-alt"></i>
-      						</a>
-						</div>
-					</div>
-					<div class="info-product text-center">
-						<h4 class="des-font capital title-product space_top_20"><a href="#" tabindex="-1">embossed backpack in brown</a></h4>
-						<p class="number-font"><span class="price">RS.399.00</span></p>
-					</div>
-				</div></div></div>
-				<div class="slick-slide slick-current slick-active" data-slick-index="0" aria-hidden="false" style="width: 1420px;" tabindex="0"><div><div class="product trousers column margin_bottom_40 show" style="width: 25%; display: inline-block;">
-					<div class="img-product relative">
-						<a href="/details1" tabindex="0"><img src="/static/home_files/1.jpg" style="height: 400px;width: 340px;" class="img-responsive" alt=""></a>
-						
-						<div class="product-icon text-center absolute">
-							
-						</div>
-					</div>
-					<div class="info-product text-center">
-						<h4 class="des-font capital title-product space_top_20"><a href="#" tabindex="0">Printed Round Neck T-Shirt</a></h4>
-						<p class="number-font price-product"><span class="price">Rs.299</span></p>
-					</div>
-				</div><div class="product shoes column margin_bottom_40 show" style="width: 25%; display: inline-block;">
-					<div class="img-product relative">
-						<a href="/details2" tabindex="0"><img src="/static/home_files/2.jpg" style="height: 400px;width: 340px;" class="img-responsive" alt=""></a>
-
-						<div class="product-icon absolute text-center">
-							
-						</div>
-					</div>
-					<div class="info-product text-center">
-						<h4 class="des-font capital title-product space_top_20"><a href="#" tabindex="0">Disney Donald Duck Printed Crop T-shirt</a></h4>
-						<p class="number-font"><span class="price">Rs.559</span></p>
-					</div>
-				</div><div class="product blazers column margin_bottom_40 show" style="width: 25%; display: inline-block;">
-					<div class="img-product relative">
-						<a href="/details3" tabindex="0"><img src="/static/home_files/3.jpg" style="height: 400px;width: 340px;" class="img-responsive" alt=""></a>
-						
-						<div class="product-icon absolute text-center">
-							
-						</div>
-					</div>
-					<div class="info-product text-center">
-						<h4 class="des-font capital title-product space_top_20"><a href="#" tabindex="0">V-Neck Full Sleeve Floral Top</a></h4>
-						<p class="number-font"><span class="price">Rs.399</span></p>
-					</div>
-				</div><div class="product jackets column margin_bottom_40 show" style="width: 25%; display: inline-block;">
-					<div class="img-product relative">
-						<a href="/details4" tabindex="0"><img src="/static/home_files/4.jpg" style="height: 400px;width: 340px;" class="img-responsive" alt=""></a>
-
-						<div class="product-icon absolute text-center">
-							
-						</div>
-					</div>
-					<div class="info-product text-center">
-						<h4 class="des-font capital title-product space_top_20"><a href="#" tabindex="0">Blue-White Crop Top</a></h4>
-						<p class="number-font"><span class="price">Rs.599</span></p>
-					</div>
-				</div></div><div><div class="product accessories column margin_bottom_40 show" style="width: 25%; display: inline-block;">
-					<!-- <div class="img-product relative">
-						<a tabindex="0" href="/details5"><img src="/static/home_files/5.jpg" style="height: 400px;width: 340px;" class="img-responsive" alt=""></a>
-
-						<div class="product-icon absolute text-center">
-							<form method="post" enctype="multipart/form-data" class="inline-block icon-addcart">
-  							  <input type="hidden" name="id" value="" tabindex="0">
-  							  <button type="submit" name="add" class="enj-add-to-cart-btn btn-default" tabindex="0"><i class="ti-bag"></i></button>
-  							</form>
-  							<a class="icon-heart inline-block" tabindex="0"><i class="ti-heart"></i></a>
-  							<a class="engoj_btn_quickview icon-quickview inline-block" title="quickview" tabindex="0">
-      						  <i class="ti-more-alt"></i>
-      						</a>
-						</div>
-					</div>
-					<div class="info-product text-center">
-						<h4 class="des-font capital title-product space_top_20"><a href="#" tabindex="0">Lavender net lehenga</a></h4>
-						<p class="number-font"><span class="price">Rs.3,199</span></p>
-					</div>
-				</div><div class="product shoes column margin_bottom_40 show" style="width: 25%; display: inline-block;">
-					<div class="img-product relative">
-						<a  tabindex="0" href="/details6"><img src="/static/home_files/6.jpg" style="height: 400px;width: 340px;" class="img-responsive" alt=""></a>
-
-						<div class="product-icon absolute text-center">
-							<form method="post" enctype="multipart/form-data" class="inline-block icon-addcart">
-  							  <input type="hidden" name="id" value="" tabindex="0">
-  							  <button type="submit" name="add" class="enj-add-to-cart-btn btn-default" tabindex="0"><i class="ti-bag"></i></button>
-  							</form>
-  							<a  class="icon-heart inline-block" tabindex="0"><i class="ti-heart"></i></a>
-  							<a  class="engoj_btn_quickview icon-quickview inline-block" title="quickview" tabindex="0">
-      						  <i class="ti-more-alt"></i>
-      						</a>
-						</div>
-					</div>
-					<div class="info-product text-center">
-						<h4 class="des-font capital title-product space_top_20"><a href="#" tabindex="0">Multi coloured sequence lehenga</a></h4>
-						<p class="number-font"><span class="price">Rs.4,999</span></p>
-					</div>
-				</div><div class="product trousers column margin_bottom_40 show" style="width: 25%; display: inline-block;">
-					<div class="img-product relative">
-						<a href="/details7" tabindex="0"><img src="/static/home_files/7.jpg"  style="height: 400px;width: 340px;" class="img-responsive" alt=""></a>
-						
-						<div class="product-icon text-center absolute">
-							<form method="post" action="/details1" enctype="multipart/form-data" class="inline-block icon-addcart">
-  							  <input type="hidden" name="id" value="" tabindex="0">
-  							  <button type="submit" name="add" class="enj-add-to-cart-btn btn-default" tabindex="0"><i class="ti-bag"></i></button>
-  							</form>
-  							<a href="/details1" class="icon-heart inline-block" tabindex="0"><i class="ti-heart"></i></a>
-  							<a href="/details1" class="engoj_btn_quickview icon-quickview inline-block" title="quickview" tabindex="0">
-      						  <i class="ti-more-alt"></i>
-      						</a>
-						</div>
-					</div>
-					<div class="info-product text-center">
-						<h4 class="des-font capital title-product space_top_20"><a href="#" tabindex="0">Yellow silk lehenga</a></h4>
-						<p class="number-font price-product"><span class="price">Rs.5999</span></p>
-					</div>
-				</div><div class="product shoes column margin_bottom_40 show" style="width: 25%; display: inline-block;">
-					<div class="img-product relative">
-						<a tabindex="0" href="/details8"><img src="/static/home_files/8.jpg" style="height: 400px;width: 340px;" class="img-responsive" alt=""></a>
-
-						<div class="product-icon absolute text-center">
-							<form method="post" enctype="multipart/form-data" class="inline-block icon-addcart">
-  							  <input type="hidden" name="id" value="" tabindex="0">
-  							  <button type="submit" name="add" class="enj-add-to-cart-btn btn-default" tabindex="0"><i class="ti-bag"></i></button>
-  							</form>
-  							<a class="icon-heart inline-block" tabindex="0"><i class="ti-heart"></i></a>
-  							<a class="engoj_btn_quickview icon-quickview inline-block" title="quickview" tabindex="0">
-      						  <i class="ti-more-alt"></i>
-      						</a>
-						</div>
-					</div>
-					<div class="info-product text-center">
-						<h4 class="des-font capital title-product space_top_20"><a href="#" tabindex="0">Black lehenga</a></h4>
-						<p class="number-font"><span class="price">Rs.2999</span></p>
-					</div>
-				</div></div></div>
-				 -->
-		
-
 			</div></div>
-				
+		</div>
+		<div class="row">
+			<div class="col-sm-3">
+				<a href="/details1" >
+					<div align="center">
+						<img src="/static/home_files/1.jpg" class="img-responsive" style="height: 400px;width: 340px;" alt="">
+					</div>
+				</a>
 
-			</div></div></div></div>
+					<h4 class="des-font capital title-product space_top_20" align="center"><a href="/details1" tabindex="0">Printed Round Neck T-Shirt</a></h4>
+					<p class="number-font price-product" align="center"><span class="price"><a href="/details1">Rs.299</a></span></p>
+					<br><br>
+			</div>
+			<div class="col-sm-3">
+				<a href="/details2" >
+					<div align="center">
+						<img src="/static/home_files/2.jpg" class="img-responsive" style="height: 400px;width: 340px;" alt="">
+					</div>
+					
+				</a>
+			
+					<h4 class="des-font capital title-product space_top_20" align="center"><a href="/details2" tabindex="0">Disney Donald Duck Printed Crop T-shirt</a></h4>
+					<p class="number-font price-product" align="center"><span class="price"><a href="/details2">Rs.599</a></span></p>
+					<br><br>
+			</div>
+			<div class="col-sm-3">
+				<a href="/details3" >
+					<div align="center">
+						<img src="/static/home_files/3.jpg" class="img-responsive" style="height: 400px;width: 340px;" alt="">
+					</div>
+					
+				</a>
+			
+					<h4 class="des-font capital title-product space_top_20" align="center"><a href="/details3" tabindex="0">V-Neck Full Sleeve Floral Top</a></h4>
+					<p class="number-font price-product" align="center"><span class="price"><a href="/details3">Rs.399</a></span></p>
+					<br><br>
+				
+			</div>
+			<div class="col-sm-3">
+				<a href="/details4" >
+					<div align="center">
+						<img src="/static/home_files/4.jpg" class="img-responsive" style="height: 400px;width: 340px;" alt="">
+					</div>
+					
+				</a>
+			
+					<h4 class="des-font capital title-product space_top_20" align="center"><a href="/details4" tabindex="0">Blue-White Crop Top</a></h4>
+					<p class="number-font price-product" align="center"><span class="price"><a href="/details4">Rs.599</a></span></p>
+					<br><br>
 			</div>
 		</div>
 	</div>
-	
+	<br><br><br><br><br><br>
 	<div class="container" style="max-width: 70%;" id="aboutus">
 		<h1 class="title-font capital margin_bottom_10 title-bestseller text-center" style="font-size: 50px;margin-top: -15rem;" align="center">About us</h1><br>
 		<p style="text-align: center;font-size: 20px;">Our website is your gateway to a world of fashion and style. As you navigate through this virtual fashion haven, you'll discover a curated collection of clothing that caters to every taste and occasion.
