--- a/templates/login.html
+++ b/templates/login.html
@@ -33,7 +33,7 @@ body {
   background-color: black;
   transition: 1s;
   background-image: url('static/home_files/banner.png');
-  background-size: cover;
+  background-size: contain;
   background-repeat: no-repeat;
   background-position: center;
 }
