--- a/templates/cart.html
+++ b/templates/cart.html
@@ -211,12 +211,7 @@
 
               <br><br>
               <div class="widget-menu-wrap">
-                <ul class="nav-menu">
-                  <li><a href="https://template.hasthemes.com/olivine/olivine/about.html">About Us</a></li>
-                  <li><a href="https://template.hasthemes.com/olivine/olivine/shop-cart.html#">FAQ</a></li>
-                  <li><a href="https://template.hasthemes.com/olivine/olivine/shop-cart.html#">Help</a></li>
-                  <li><a href="https://template.hasthemes.com/olivine/olivine/shop-cart.html#">Shipping &amp; Return</a></li>
-                </ul>
+              
               </div>
             </div>
           </div>
@@ -229,7 +224,7 @@
           <div class="row align-items-center">
             <div class="col-md-6">
               <div class="widget-copyright text-center">
-                <p>© 2023 <span>Olivine</span>. Made with by <a target="_blank" href="#">Trea beaux Developers</a></p>
+                <p>© 2023 <span>Classic Threads</span>. Made with by <a target="_blank" href="#">Classic Threads Developers</a></p>
               </div>
             </div>
             <div class="col-md-6">
@@ -268,8 +263,8 @@
           <!-- Start Mobile Menu Wrapper -->
           <div class="res-mobile-menu">
             <!-- Note Content Auto Generate By Jquery From Main Menu -->
-          <div class="slicknav_menu"><a href="https://template.hasthemes.com/olivine/olivine/shop-cart.html#" aria-haspopup="true" role="button" tabindex="0" class="slicknav_btn slicknav_collapsed" style=""><span class="slicknav_menutxt">MENU</span><span class="slicknav_icon"><span class="slicknav_icon-bar"></span><span class="slicknav_icon-bar"></span><span class="slicknav_icon-bar"></span></span></a><ul class="slicknav_nav slicknav_hidden" style="display: none;" aria-hidden="true" role="menu">
-                  <li class="slicknav_collapsed slicknav_parent"><a href="https://template.hasthemes.com/olivine/olivine/shop-cart.html#" role="menuitem" aria-haspopup="true" tabindex="-1" class="slicknav_item slicknav_row" style=""><a href="https://template.hasthemes.com/olivine/olivine/index.html" tabindex="-1">Home</a>
+          <div class="slicknav_menu"><a href="#" aria-haspopup="true" role="button" tabindex="0" class="slicknav_btn slicknav_collapsed" style=""><span class="slicknav_menutxt">MENU</span><span class="slicknav_icon"><span class="slicknav_icon-bar"></span><span class="slicknav_icon-bar"></span><span class="slicknav_icon-bar"></span></span></a><ul class="slicknav_nav slicknav_hidden" style="display: none;" aria-hidden="true" role="menu">
+                  <li class="slicknav_collapsed slicknav_parent"><a href="#" role="menuitem" aria-haspopup="true" tabindex="-1" class="slicknav_item slicknav_row" style=""><a href="https://template.hasthemes.com/olivine/olivine/index.html" tabindex="-1">Home</a>
                     <span class="slicknav_arrow"><i class="icofont-plus"></i></span></a><ul role="menu" class="slicknav_hidden" style="display: none;" aria-hidden="true">
                       <li><a href="https://template.hasthemes.com/olivine/olivine/index.html" role="menuitem" tabindex="-1">Home 1</a></li>
                       <li><a href="https://template.hasthemes.com/olivine/olivine/index-2.html" role="menuitem" tabindex="-1">Home 2</a></li>
