--- a/templates/cart.html
+++ b/templates/cart.html
@@ -128,50 +128,36 @@
                     </tr>
                   </thead>
                   <tbody>
+
+                    {% if cart %}
+                    {% for item in cart%}
                     <tr>
                       <td class="pro-product">
                         <div class="product-info">
                           <div class="product-img">
-                            <a href="/details1"><img src="static/home_files/1.jpg" alt="Olivine -Shop"></a>
+                            <a href="/details1"><img src="static/home_files/{{item.product_id}}.jpg" alt="Olivine -Shop"></a>
                           </div>
                           <div class="product-info">
-                            <h4><a href="/details1">Printed round neck T-shirt</a></h4>
+                            <h4><a href="/details1">{{item.name}}</a></h4>
                           </div>
                         </div>
                       </td>
-                      <td class="pro-price text-center"><span>Rs.299.00</span></td>
+                      <td class="pro-price text-center"><span>{{price}}</span></td>
                       <td class="pro-quantity text-center">
                         <div class="quick-product-action">
                           <div class="pro-qty2">
-                            <input type="text" id="quantity" title="Quantity" value="1">
+                            <input type="text" id="quantity" title="Quantity" value="{{item.count}}">
                           <a href="#" class="dec qty-btn">(-)</a><a href="#" class="inc qty-btn">(+)</a></div>
                         </div>
                       </td>
                       <td class="pro-subtotal text-center"><span>Rs.299.00</span></td>
                       <td class="pro-remove text-center"><a href="#">×</a></td>
                     </tr>
-                    <tr>
-                      <td class="pro-product">
-                        <div class="product-info">
-                          <div class="product-img">
-                            <a href="/details2"><img src="static/home_files/4.jpg" alt="Olivine -Shop"></a>
-                          </div>
-                          <div class="product-info">
-                            <h4><a href="/details2">Blue White crop top</a></h4>
-                          </div>
-                        </div>
-                      </td>
-                      <td class="pro-price text-center"><span>Rs.599</span></td>
-                      <td class="pro-quantity text-center">
-                        <div class="quick-product-action">
-                          <div class="pro-qty2">
-                            <input type="text" id="quantity3" title="Quantity" value="1">
-                          <a href="https://template.hasthemes.com/olivine/olivine/shop-cart.html#" class="dec qty-btn">(-)</a><a href="https://template.hasthemes.com/olivine/olivine/shop-cart.html#" class="inc qty-btn">(+)</a></div>
-                        </div>
-                      </td>
-                      <td class="pro-subtotal text-center"><span>Rs.599</span></td>
-                      <td class="pro-remove text-center"><a href="https://template.hasthemes.com/olivine/olivine/shop-cart.html#/">×</a></td>
-                    </tr>
+                    {% endfor %}
+                    {% endif %}
+
+
+
                   </tbody>
                 </table>
               </div>
@@ -193,6 +179,7 @@
     <!--== End Cart Area Wrapper ==-->
   </main>
 
+
   <!--== Start Footer Area Wrapper ==-->
   <footer class="footer-area">
     <div class="footer-main">
@@ -205,6 +192,7 @@
                   <img class="logo-main" src="static/home_files/logo.png" alt="Logo" width="30%">
                 </a>
               </div>
+              
              
               <h5>Follows Us</h5>
 
