--- a/templates/details1.html
+++ b/templates/details1.html
@@ -151,16 +151,18 @@
 				<form class="inline-block icon-addcart">
   							  <input type="hidden" name="id" value=""> 
   				</form>
-				<form class="inline-block icon-addcart" action="/cart" method="post">
+				<form class="inline-block icon-addcart" id="form" action="/cart" method="post">
 					<input type="hidden" name="count" id="items" value="">
 					<script type="text/javascript">
-						document.getElementById('counter').addEventListener('change', function () {
-							document.getElementById('items').value = this.value;
-						});
+						document.getElementById('form').onsubmit = function() {
+							var items = document.getElementById('counter').value;
+							document.getElementById('items').value = items;
+							this.submit();
+						};
 					</script>
-										<input type="hidden" name="prod-price" value="Rs.299">
-										<input type="hidden" name="prod-name" value="Printed Round Neck T-Shirt">  				
-					
+					<input type="hidden" name="prod-price" value="Rs.299">
+					<input type="hidden" name="prod-name" value="Printed Round Neck T-Shirt">  				
+					<input type="hidden" name="prod-id" value="1">
 					<button type="submit" name="add" class="enj-add-to-cart-btn btn-default menu-font uppercase">add to cart</button>
 				</form>
 				  
