--- a/templates/details3.html
+++ b/templates/details3.html
@@ -151,16 +151,19 @@
 					</div>
 					</div>
 				</div>
-				<form class="inline-block icon-addcart" action="/cart" method="post">
+				<form class="inline-block icon-addcart" id="form" action="/cart" method="post">
 					<input type="hidden" name="count" id="items" value="">
 					<script type="text/javascript">
-						document.getElementById('counter').addEventListener('change', function () {
-							document.getElementById('items').value = this.value;
-						});
+						document.getElementById('form').onsubmit = function() {
+							var items = document.getElementById('counter').value;
+							document.getElementById('items').value = items;
+							this.submit();
+						};
 					</script>
 					<input type="hidden" name="prod-price" value="Rs.599">
 					<input type="hidden" name="prod-name" value="V-Neck Full Sleeve Floral Top">  				
-					
+					<input type="hidden" name="prod-id" value="3">
+
 					  							  <button type="submit" name="add" class="enj-add-to-cart-btn btn-default menu-font uppercase">add to cart</button>
   				</form>
   				<a href="#" class="icon-heart"><i class="ti-heart"></i></a>
