--- a/templates/details1.html
+++ b/templates/details1.html
@@ -24,14 +24,14 @@
         <div class="menu-push">
             <span class="close-left js-close"><i class="ti-close"></i></span>
             <div class="clearfix"></div>
-            <form role="search" method="get" id="searchform" class="searchform title-font" action="#">
+            <!-- <form role="search" method="get" id="searchform" class="searchform title-font" action="#">
                 <div>
                     <label class="screen-reader-text" for="q"></label>
                     <input type="text" placeholder="Search for products" value="" name="q" id="q" autocomplete="off">
                     <input type="hidden" name="type" value="product">
                     <button type="submit" id="searchsubmit"><i class="ti-search"></i></button>
                 </div>
-            </form>
+            </form> -->
             <ul class="nav-home5 js-menubar clear-space menu-font">
                 <li class="level1 active dropdown">
                     <a href="/home" class="uppercase">Home</a>
@@ -68,8 +68,6 @@
 				</ul>
 			</div>
 			<div class="col-lg-3 col-md-3 col-sm-6 col-xs-7 text-right icon-main">
-				<a href="#" class="link-menu delay03 container_20 inline-block hidden-xs hidden-sm" id="btn-search"><i class="ti-search"></i></a>
-				<a href="#" class="link-menu delay03 container_20 inline-block hidden-xs hidden-sm" id="btn-login"><i class="zoa-icon-user"></i></a>
 				<a href="/cart" class="link-menu delay03 container_20 relative inline-block text-center" id="btn-cart">
 					<i class="ti-bag"></i>
 					
@@ -119,21 +117,10 @@
 		<div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 info-product-detail">
 		
 					<h1 class="title-font title-banner banner-product-detail"> Printed Round Neck T-Shirt </h1>
-					<ul class="breadcrumb des-font">
-						<li><a href="/home">Home</a></li>
-						<li><a href="#">Shop</a></li>
-						<li class="active"> Printed Round Neck T-Shirt</li>
-					</ul>
+					
 		
 			<p class="number-font price margin_bottom_40">Rs.299</p>
-			<p class="product-preview margin_bottom_50">
-				<i class="ti-star"></i>
-				<i class="ti-star"></i>
-				<i class="ti-star"></i>
-				<i class="ti-star"></i>
-				<i class="ti-star"></i>
-				<span class="relative line-space">__</span>
-				<span class="des-font">(02) Reviews</span>
+
 			</p>
 		
 			<div class="flex margin_bottom_50 border-bot space_bot_50 btn-function">
@@ -142,7 +129,7 @@
 					<div class="input-group-button absolute down-btn">
 						<span class="input-number-decrement ti-angle-down"></span>
 					</div>
-					  <input class="input-number menu-font" id="counter" type="number" min="0" max="1000" value="1">
+					  <input class="input-number menu-font" id="counter" type="number" min="1" max="1000" value="1">
 					<div class="input-group-button absolute up-btn">
 						<span class="input-number-increment ti-angle-up"></span>
 					</div>
