--- a/templates/login.html
+++ b/templates/login.html
@@ -138,12 +138,12 @@ body {
             <h2 class="animation a1" style="font-size: 30px;">Classic Threads!</h2>
             <br>
             <h2 class="animation a1">Welcome </h2>
-            <h4 class="animation a2">Log in to your account using email and password</h4>
+            <h4 class="animation a2">Log in to your account </h4>
           </div>
           <form class="form" action="/login" method="post">
             <input type="text" class="form-field animation a3" placeholder="Email Address"  name = "nm">
             <input type="password" class="form-field animation a4" placeholder="Password" name="pwd">
-            <p class="animation a5"><a href="#">Forgot Password</a></p>
+            <br>
             <input class="animation a6"type = "submit" value = "submit" style="border-radius: 10px;padding-top: 15px;padding-bottom: 15px;background-color: rgb(100, 100, 227);font-size: 20px;" />
             <!-- <button class="animation a6">LOGIN</button> -->
           </form>
