--- a/templates/thankyou.html
+++ b/templates/thankyou.html
@@ -170,7 +170,7 @@
           <div class="row align-items-center">
             <div class="col-md-6">
               <div class="widget-copyright text-center">
-                <p>© 2023 <span>Classic Threads</span>. Made with by <a target="_blank" href="#">Classic Threads Developers</a></p>
+                <p>© 2023 <span>Classic Threads</span>. Made with by <a target="_blank" href="/home">Classic Threads Developers</a></p>
               </div>
             </div>
             <div class="col-md-6">
