--- a/templates/cash.html
+++ b/templates/cash.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <title>tres Beaux</title>
+    <title>Classic Threads</title>
 
     <!--== Favicon ==-->
     <link rel="shortcut icon" href="/static/home_files/logo.png" type="image/x-icon">
@@ -117,7 +117,6 @@
           <div class="col-lg-12">
             <div class="page-title-content ">
               <h2 class="title">Checkout</h2>
-              <div class="bread-crumbs"><a href="#">Add cart<span class="breadcrumb-sep">&gt;</span></a><span class="active">Checkout here</span></div>
             </div>
           </div>
         </div>
@@ -157,7 +156,7 @@
                       </div>
                       <div class="col-md-12">
                         <div class="form-group mb-0">
-                          <textarea class="form-control textarea" name="con_addresscon_address" placeholder="Your Address"></textarea>
+                          <textarea class="form-control textarea" name="con_address" placeholder="Your Address"></textarea>
                         </div>
                       </div>
                       <div class="col-md-12">
@@ -202,10 +201,7 @@
               </div>
               
               <div class="widget-menu-wrap">
-                <ul class="nav-menu">
-                  <li><a href="/home#aboutus">About Us</a></li>
-                  
-                </ul>
+                
               </div>
             </div>
           </div>
@@ -218,7 +214,7 @@
           <div class="row align-items-center">
             <div class="col-md-6">
               <div class="widget-copyright text-center">
-                <p>© 2023 <span>Classic threads</span>. Made with by <a target="_blank" href="#">Classic Threads Developers</a></p>
+                <p>© 2023 <span>Classic threads</span>. Made with by <a target="_blank" href="/home">Classic Threads Developers</a></p>
               </div>
             </div>
             <div class="col-md-6">
