--- a/templates/details4.html
+++ b/templates/details4.html
@@ -24,14 +24,7 @@
         <div class="menu-push">
             <span class="close-left js-close"><i class="ti-close"></i></span>
             <div class="clearfix"></div>
-            <form role="search" method="get" id="searchform" class="searchform title-font" action="#">
-                <div>
-                    <label class="screen-reader-text" for="q"></label>
-                    <input type="text" placeholder="Search for products" value="" name="q" id="q" autocomplete="off">
-                    <input type="hidden" name="type" value="product">
-                    <button type="submit" id="searchsubmit"><i class="ti-search"></i></button>
-                </div>
-            </form>
+          
             <ul class="nav-home5 js-menubar clear-space menu-font">
                 <li class="level1 active dropdown">
                     <a href="/home" class="uppercase">Home</a>
@@ -71,8 +64,7 @@
 				</ul>
 			</div>
 			<div class="col-lg-3 col-md-3 col-sm-6 col-xs-7 text-right icon-main">
-				<a href="#" class="link-menu delay03 container_20 inline-block hidden-xs hidden-sm" id="btn-search"><i class="ti-search"></i></a>
-				<a href="#" class="link-menu delay03 container_20 inline-block hidden-xs hidden-sm" id="btn-login"><i class="zoa-icon-user"></i></a>
+				
 				<a href="/cart" class="link-menu delay03 container_20 relative inline-block text-center" id="btn-cart">
 					<i class="ti-bag"></i>
 					
@@ -122,21 +114,10 @@
 		<div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 info-product-detail">
 		
 					<h1 class="title-font title-banner banner-product-detail">Blue-White Crop Top</h1>
-					<ul class="breadcrumb des-font">
-						<li><a href="/home">Home</a></li>
-						<li><a href="#">Shop</a></li>
-						<li class="active">Blue-White Crop Top</li>
-					</ul>
+					
 		
 			<p class="number-font price margin_bottom_40">Rs.599</p>
-			<p class="product-preview margin_bottom_50">
-				<i class="ti-star"></i>
-				<i class="ti-star"></i>
-				<i class="ti-star"></i>
-				<i class="ti-star"></i>
-				<i class="ti-star"></i>
-				<span class="relative line-space">__</span>
-				<span class="des-font">(02) Reviews</span>
+			
 			</p>
 		
 			<div class="flex margin_bottom_50 border-bot space_bot_50 btn-function">
@@ -145,13 +126,13 @@
 					<div class="input-group-button absolute down-btn">
 						<span class="input-number-decrement ti-angle-down"></span>
 					</div>
-					  <input class="input-number menu-font" type="number" id="counter" min="0" max="1000" value="1">
+					  <input class="input-number menu-font" type="number" id="counter" min="1" max="1000" value="1">
 					<div class="input-group-button absolute up-btn">
 						<span class="input-number-increment ti-angle-up"></span>
 					</div>
 					</div>
 				</div>
-				<form class="inline-block icon-addcart" id="form" action="/cart">
+				<form class="inline-block icon-addcart" id="form" action="/cart" method="post">
 					<input type="hidden" name="count" id="items" value="" method="post">
 					<script type="text/javascript">
 						document.getElementById('form').onsubmit = function() {
@@ -166,7 +147,7 @@
 			
 					<button type="submit" name="add" class="enj-add-to-cart-btn btn-default menu-font uppercase">add to cart</button>
   				</form>
-  				<a href="#" class="icon-heart"><i class="ti-heart"></i></a>
+  				
   				
 			</div>
 			<!--  -->
@@ -230,16 +211,7 @@
 </footer>
 <div class="overlay"></div>
 	<div class="gotop text-center" style="display: none;"><i class="ti-angle-up"></i></div>
-	<div class="form-search delay03 text-center">
-						
-                        	<i class="ti-close" id="close-search"></i>
-                            <h3 class="text-center title-font">what are<br>your looking for ?</h3>
-                            <form method="get" action="#" role="search">
-                              <input type="text" class="form-control control-search des-font" value="" autocomplete="off" placeholder="Enter Search ..." aria-label="SEARCH" name="q">
-                              <button class="button_search title-font" type="submit">search</button>
-                            </form>
-                        
-	</div>
+	
 	<div class="form-cart delay03">
 		<i class="ti-close" id="close-cart"></i>
 		<h3 class="title-font capital">my cart</h3>
